# udacity-metrics-dashboard

./: Makefile  README.md
grafana/: app_dashboard.json  kpi_dashboard.json  node_cpu_utilization_dashboard.json
kind/: config.yaml
manifests/app/: backend.yaml  frontend.yaml  jaeger.yaml
manifests/prometheus-config/: app-metrics-scraping.yaml
reference-app/backend/: .env  Dockerfile  Makefile  app.py  pyproject.toml  telemetry.py
reference-app/frontend/: Dockerfile  Makefile  app.py  pyproject.toml  telemetry.py
